K8s/test-svc.yaml
# PostgreSQL StatefulSet Service
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-lb
spec:
  selector:
    app: rabbitmq
  type: LoadBalancer
  ports:
    - name: rabbitmqdashboard
      port: 15627
      targetPort: 15627
    - name: rabbitmq
      port: 5672
      targetPort: 5672
